<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--items for a single row of RecyclerView-->
        <TextView
            android:id="@+id/txt_Nombre_profesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDniProfesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtTelefonoProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/black" />


    </LinearLayout>
</LinearLayout>